--- a/front/store-manager/package.json
+++ b/front/store-manager/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.26.1",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^17.0.2",
     "react-js-dialog-box": "^1.1.6",
     "react-router-dom": "^6.2.2",
