--- a/front/store-manager/package.json
+++ b/front/store-manager/package.json
@@ -18,7 +18,8 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "react-select": "^5.2.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.0"
   },
   "scripts": {
     "start": "react-scripts start",
