Antes de agregarle el drawer y despues de quitar el validador de datos que esta dañado

--- a/mobile/stores-app/app.json
+++ b/mobile/stores-app/app.json
@@ -1,5 +1,13 @@
 {
   "expo": {
+    "plugins" : [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Allow $(PRODUCT_NAME) to use your location."
+        }
+      ]
+    ],
     "name": "stores-app",
     "slug": "stores-app",
     "version": "1.0.0",
