--- a/mobile/stores-app/package.json
+++ b/mobile/stores-app/package.json
@@ -15,25 +15,26 @@
     "@react-native-community/checkbox": "^0.5.15",
     "@react-native-community/geolocation": "^3.0.6",
     "@react-native-masked-view/masked-view": "0.2.8",
+    "@react-navigation/drawer": "^6.6.2",
     "@react-navigation/stack": "^6.3.16",
     "axios": "^1.3.5",
     "expo": "~48.0.10",
+    "expo-location": "~15.1.1",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.71.7",
     "react-native-bottom-sheet": "^1.0.3",
-    "react-native-floating-label-input": "^1.4.2",
     "react-native-floating-label-text-input": "^0.1.5",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.3.2",
+    "react-native-masked-text": "^1.13.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-svg": "13.4.0",
     "react-native-svg-transformer": "^1.0.0",
-    "react-native-web": "~0.18.10",
-    "expo-location": "~15.1.1"
+    "react-native-web": "~0.18.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
